tests/src/frontend/typechecking/invalid/pattern_match_constraints6.sk
base class CBase
class C1() extends CBase
class C2() extends CBase {
  fun bar(): void {
    void
  }
}
base class Bar<+T>
class Foo() extends Bar<C2>

fun test<T: C2 & C1>(x: Bar<T>): void {
  x match {
  | Foo() -> void
  }
}
